--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      rel="stylesheet"
+      href="../src/css/reset.css"
+    />
+    <link
+      href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-neo.css"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
