--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="../src/css/reset.css"
-    />
-    <link
-      href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-neo.css"
-      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <title>React App</title>
   </head>
