--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="끼룩끼룩 - 기념품의 모든 것"
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=block"
     />
     <title>React App</title>
   </head>
