--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=block"
     />
-    <title>React App</title>
+    <title>끼룩끼룩</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
